Refactored code to import data from sample file.