@@ -7,6 +7,8 @@ import org.springframework.batch.item.ItemProcessor;
 import org.springframework.stereotype.Component;
 
 import java.util.Currency;
+import java.util.Locale;
+import java.util.TimeZone;
 
 /**
  * @author ffazil
@@ -14,16 +16,22 @@ import java.util.Currency;
  */
 @Slf4j
 @Component
-public class CountryProcessor implements ItemProcessor<CountryInfo, Country>{
+public class CountryProcessor implements ItemProcessor<SampleData, Country>{
     @Override
-    public Country process(CountryInfo item) throws Exception {
-        return new Country(item.getCountryName(),
-                new Alpha2Code(item.getCountryCode()),
-                new Alpha3Code(item.getIsoAlpha3()),
-                Currency.getInstance(item.getCurrencyCode().isEmpty() ? "USD" : item.getCurrencyCode()),
-                Continent.valueOf(item.getContinent()),
-                Double.valueOf(item.getAreaInSqKm()),
-                Double.valueOf(item.getPopulation()),
-                new Location(0.0, 0.0));
+    public Country process(SampleData item) throws Exception {
+        if(item.getFeatureCode().equals("PCLI")){
+            return new Country(item.getAsciiName(),
+                    new Alpha2Code(item.getAlpha2Code()),
+                    new Alpha3Code(item.getAlpha2Code()),
+                    Currency.getInstance(new Locale("en", item.getAlpha2Code())),
+                    Continent.Asia,
+                    new Double(0),
+                    new Double(item.getPopulation().toString()),
+                    new Location(Double.valueOf(item.getLatitude()), Double.valueOf(item.getLongitude())));
+        }
+
+        return null;
     }
+
+
 }
